# shixun-project

./: .gitignore  CMakeLists.txt  DEPLOY.md  README.md  build.sh  toolchain-gec6818.cmake  技术报告.md
include/: bridge.h  lockscreen.h  mainwindow.h  patternlock.h  rfidreader.h  touchscreen.h
src/: alpr_main.cpp  lockscreen.cpp  main.cpp  mainwindow.cpp  patternlock.cpp  rfidreader.cpp  touchscreen.cpp
